crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_link_text_skips_raw_html_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..64
  PARAGRAPH@0..25
    TEXT@0..5 "[foo "
    INLINE_HTML@5..24
      INLINE_HTML_CONTENT@5..24 "<bar attr=\"](baz)\">"
    NEWLINE@24..25 "\n"
  BLANK_LINE@25..26
    BLANK_LINE@25..26 "\n"
  PARAGRAPH@26..51
    TEXT@26..31 "[foo "
    INLINE_HTML@31..50
      INLINE_HTML_CONTENT@31..50 "<bar attr=\"][ref]\">"
    NEWLINE@50..51 "\n"
  BLANK_LINE@51..52
    BLANK_LINE@51..52 "\n"
  REFERENCE_DEFINITION@52..64
    LINK@52..57
      LINK_START@52..53
        LINK_START@52..53 "["
      LINK_TEXT@53..56
        TEXT@53..56 "ref"
      TEXT@56..57 "]"
    TEXT@57..58 ":"
    WHITESPACE@58..59 " "
    REFERENCE_URL@59..63
      TEXT@59..63 "/uri"
    NEWLINE@63..64 "\n"
