crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_bullet_outdent_after_blank_no_outer_list.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  LIST@0..18
    LIST_ITEM@0..6
      WHITESPACE@0..2 "  "
      LIST_MARKER@2..3 "*"
      WHITESPACE@3..4 " "
      PLAIN@4..6
        TEXT@4..5 "A"
        NEWLINE@5..6 "\n"
    LIST_ITEM@6..12
      WHITESPACE@6..8 "  "
      LIST_MARKER@8..9 "*"
      WHITESPACE@9..10 " "
      PLAIN@10..12
        TEXT@10..11 "B"
        NEWLINE@11..12 "\n"
    BLANK_LINE@12..13
      BLANK_LINE@12..13 "\n"
    LIST_ITEM@13..18
      WHITESPACE@13..14 " "
      LIST_MARKER@14..15 "*"
      WHITESPACE@15..16 " "
      PLAIN@16..18
        TEXT@16..17 "C"
        NEWLINE@17..18 "\n"
