crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_same_line_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..25
  LIST@0..25
    LIST_ITEM@0..25
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..25
        INLINE_HTML@2..14
          INLINE_HTML_CONTENT@2..14 "<div id=\"x\">"
        TEXT@14..18 "body"
        INLINE_HTML@18..24
          INLINE_HTML_CONTENT@18..24 "</div>"
        NEWLINE@24..25 "\n"
